--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Open source wiki framework",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "gulp dist",
+    "start": "npm build && node ./dist/server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ishg/qargus.git"
@@ -29,11 +32,13 @@
     "knex": "^0.12.7",
     "lokijs": "^1.4.3",
     "method-override": "^2.3.7",
+    "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
+    "path": "^0.12.7",
     "request": "^2.80.0",
     "shortid": "^2.2.8",
     "sqlite3": "^3.1.8",
@@ -63,6 +68,7 @@
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
+    "standard": "^9.0.1",
     "stream": "^0.0.2"
   },
   "browser": {
