--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "envify": "^4.0.0",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
-    "gulp-rename": "^1.2.2",
     "jsonwebtoken": "^7.3.0",
     "knex": "^0.12.7",
     "lokijs": "^1.4.3",
@@ -36,16 +35,12 @@
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
-    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "path": "^0.12.7",
     "request": "^2.80.0",
     "shortid": "^2.2.8",
     "sqlite3": "^3.1.8",
-    "validator": "^7.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "vinyl-transform": "^1.0.0",
+    "validator": "^7.0.0",    
     "vue": "^2.2.1",
     "winston": "^2.3.1"
   },
@@ -59,17 +54,23 @@
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-clean": "^0.3.2",
+    "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-filter": "^5.0.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-print": "^2.0.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
+    "nodemon": "^1.11.0",
+    "rimraf": "^2.6.1",
     "standard": "^9.0.1",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vinyl-transform": "^1.0.0"
   },
   "browser": {
     "vue": "vue/dist/vue.common.js"
