--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "envify": "^4.0.0",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
     "jsonwebtoken": "^7.3.0",
     "knex": "^0.12.7",
     "lokijs": "^1.4.3",
+    "medium-editor": "^5.23.0",
     "method-override": "^2.3.7",
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
@@ -40,7 +42,7 @@
     "request": "^2.80.0",
     "shortid": "^2.2.8",
     "sqlite3": "^3.1.8",
-    "validator": "^7.0.0",    
+    "validator": "^7.0.0",
     "vue": "^2.2.1",
     "winston": "^2.3.1"
   },
