--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sqlite3": "^3.1.8",
     "validator": "^7.0.0",
     "vue": "^2.2.1",
+    "vue-router": "^2.3.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
